Change layout and fix header collapse

--- a/apps/web/src/App.css
+++ b/apps/web/src/App.css
@@ -18,3 +18,7 @@
   grid-template-rows: var(--cell-size) 1fr;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+}
