--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -12,15 +12,6 @@
     }
 }
 
-#root {
-  overflow-x: hidden;
-}
-
-html, body, #root {
-  width: 100%;
-  height: 100%;
-}
-
 .header-container {
   @apply flex justify-center relative w-full h-[8rem] gap-2 items-center bg-gray-900 px-2 select-none text-white;
 }
